<resources>
    <string name="app_name">MusicApp</string>
    <string name="logo_desctrption">Logo</string>
    <string name="menu_Exercice">Exercices</string>
    <string name="font_poetsenOne">Poetsen One</string>
    <string name="menu_parametre">Paramètres</string>
    <string name="menu_cours">Cours</string>
    <string name="parametres_intervals">Sélection d\'intervalles</string>
    <string name="Dérouler">Dérouler</string>
    <string name="parametres_save">Sauvegarder</string>
    <string name="erreur_selection_parametres">Vous avez sélectionné moins de deux intervalles.</string>
    <string-array name="noms_intervalles">
        <item>unisson</item>
        <item>seconde mineure</item>
        <item>seconde majeure</item>
        <item>tierce mineure</item>
        <item>tierce majeure</item>
        <item>quarte juste</item>
        <item>quinte diminuée</item>
        <item>quinte juste</item>
        <item>sixte mineure</item>
        <item>sixte majeure</item>
        <item>septième mineure</item>
        <item>septième majeure</item>
        <item>octave</item>
    </string-array>
    <string name="PlayButton">PlayButton</string>
    <string name="question_exercice">Quel intervalle a été joué ?</string>
    <string name="question">Question !</string>
    <string name="suivant_button">Suivant</string>
    <string name="arrow_image">arrow</string>

    <string name="separation_des_notes_ton_demi_ton">tons et demis-tons </string>
    <string name="Nom_des_notes">
        Il existe sept noms de notes : Do, Ré, Mi, Fa, Sol, La et Si.
        Il n\'existe pas d\'autres. Ces notes peuvent étre modifiées (plus précisément la
        hauteur du son) par les altérations telles que le &#35; (dièse) ou le b (bémol).
        Cette notation francaise des notes (Do, Ré, Mi, Fa, Sol, La et Si) a été initiée par le moine italien Guido d\'Arezzo en s\'inspirant d\'un chant religieux latin : l\'Hymne de Saint Jean-Baptiste.
        La première syllabe de chaque vers correspond à une note et c\'est pour cela que la note Do se dit également Ut (on a également la clef d\'Ut).
        </string>
    <string name="Noms_des_intervalles_musicaux"> Noms des intervalles musicaux </string>
    <string name="intervalle">
        La définition d\'un intervalle en musique est extrémement simple :
        il s\'agit de la distance qui sépare deux notes. Plutot fastoche à comprendre&#8230;
        Par exemple, il existe un intervalle entre un Do et Mi ou entre La et Ré.

Pour rendre les choses plus simples,
        on a donné des noms à  ces intervalles
        (intervalle de seconde, de tierce, de quinte&#8230;) que nous verrons par la suite.

Mais avant d\'entrer dans le détail,
        il faut bien avouer que cette notion, aussi facile a comprendre, est à la base de beaucoup de choses comprendre en théorie musicale. On peut citer par exemple la compréhension des accords, des gammes ou bien encore d\'une mélodie.
        La notion d\'intervalle sera donc présente aussi bien au niveau harmonique que mélodique.
    </string>
    <string name="sources_notes">Source : https://www.musiclic.com/les_notes.asp</string>
    <string name="sources_intervalle">Source : https://www.musiclic.com/blog/definition-d-un-intervalle.asp</string>
    <string name="source_separation">https://fr.wikipedia.org/wiki/Demi-ton</string>
    <string name="separation">En musique, un demi-ton désigne le plus petit intervalle conjoint de l\'échelle diatonique, équivalant approximativement à la moitié du ton, d\'où son nom.
    Le ton et le demi-ton sont les intervalles de base, qui par addition, permettent d\'obtenir tous les autres : tierce, quarte, quinte, etc.

    Il existe deux catégories de demi-ton, chacune ayant sa propre fonction, sa propre nature et sa propre étendue : le demi-ton diatonique et le demi-ton chromatique.</string>
    <string name="cours_1_notes">Noms des notes</string>
</resources>
