<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:animateLayoutChanges="true"
    android:background="@drawable/background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:animateLayoutChanges="true"
            android:layout_gravity="center"
            android:gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:src="@drawable/logo"
                    android:contentDescription="@string/logo_desctrption"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textSize="15sp"
                    android:textColor="@color/white"/>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/Menu_mainActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="25dp"
                android:gravity="center"
                android:visibility="gone">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    app:cardCornerRadius="15dp"
                    android:background="@color/grey"
                    android:onClick="btn_menu_exercice">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:layout_margin="5dp">

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:src="@drawable/quiz_icon"/>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:orientation="vertical"
                            android:gravity="center"
                            android:layout_gravity="center">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/menu_Exercice"
                                android:textSize="25sp"
                                android:fontFamily="@font/poetsen_one"
                                android:textStyle="bold"
                                android:textColor="@color/black"/>


                        </LinearLayout>

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:src="@drawable/ic_chevron_right_black_24dp"/>


                    </LinearLayout>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    app:cardCornerRadius="15dp"
                    android:background="@color/grey"
                    android:layout_marginTop="15dp"
                    android:onClick="btn_menu_parametre">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:layout_margin="5dp">

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:src="@drawable/parametre_icon"/>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:orientation="vertical"
                            android:gravity="center"
                            android:layout_gravity="center">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/menu_parametre"
                                android:textSize="25sp"
                                android:fontFamily="@font/poetsen_one"
                                android:textStyle="bold"
                                android:textColor="@color/black"/>


                        </LinearLayout>

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:src="@drawable/ic_chevron_right_black_24dp"/>


                    </LinearLayout>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    app:cardCornerRadius="15dp"
                    android:background="@color/grey"
                    android:layout_marginTop="15dp"
                    android:onClick="btn_menu_cours">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:layout_margin="5dp">

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:src="@drawable/cours_icon"/>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:orientation="vertical"
                            android:gravity="center"
                            android:layout_gravity="center">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/menu_cours"
                                android:textSize="25sp"
                                android:fontFamily="@font/poetsen_one"
                                android:textStyle="bold"
                                android:textColor="@color/black"/>


                        </LinearLayout>

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:src="@drawable/ic_chevron_right_black_24dp"/>


                    </LinearLayout>


                </androidx.cardview.widget.CardView>




            </LinearLayout>





        </LinearLayout>



    </ScrollView>



</RelativeLayout>