<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ParametreActivity"
    android:animateLayoutChanges="true"
    android:background="@drawable/background">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:animateLayoutChanges="true"
        android:layout_gravity="top"
        android:gravity="center">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="15dp"
            android:background="@color/grey"
            android:layout_marginTop="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_gravity="center">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_margin="5dp"
                    android:onClick="btn_intervalles">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/parametres_intervals"
                        android:textSize="25sp"
                        android:fontFamily="@font/poetsen_one"
                        android:textStyle="bold"
                        android:textColor="@color/black" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:src="@drawable/ic_expand_more"
                        android:layout_gravity="end"
                        android:contentDescription="@string/Dérouler"/>

                </LinearLayout>

                <ListView
                    android:id="@+id/liste_intervalles"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    >

                </ListView>

            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_alignParentBottom="true">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/parametres_save"
            android:textSize="25sp"
            android:fontFamily="@font/poetsen_one"
            android:textColor="@color/black"
            android:onClick="btn_save"/>

    </LinearLayout>

    <!--        <androidx.cardview.widget.CardView-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            app:cardCornerRadius="15dp"-->
    <!--            android:background="@color/grey"-->
    <!--            android:layout_marginTop="15dp"-->
    <!--            android:layout_alignParentBottom="true"-->
    <!--            >-->

    <!--            <LinearLayout-->
    <!--                android:layout_width="match_parent"-->
    <!--                android:layout_height="wrap_content"-->
    <!--                android:orientation="vertical"-->
    <!--                android:animateLayoutChanges="true"-->
    <!--                android:gravity="center">-->

    <!--                <TextView-->
    <!--                    android:layout_width="match_parent"-->
    <!--                    android:layout_height="wrap_content"-->
    <!--                    android:text="@string/parametres_save"-->
    <!--                    android:textSize="25sp"-->
    <!--                    android:fontFamily="@font/poetsen_one"-->
    <!--                    android:textColor="@color/black"-->
    <!--                    >-->

    <!--                </TextView>-->
    <!--            </LinearLayout>-->

    <!--</androidx.cardview.widget.CardView>-->



</RelativeLayout>