<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ExerciceActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@color/grey"
            app:cardCornerRadius="35dp"
            android:onClick="playButton">

            <ImageView
                android:id="@+id/image_play_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_play_arrow_black_24dp"
                android:contentDescription="@string/PlayButton"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@color/grey"
            app:cardCornerRadius="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/poetsen_one"
                    android:text="@string/question"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:fontFamily="@font/poetsen_one"
                    android:gravity="center"
                    android:text="@string/question_exercice"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />


            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="5dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/card0"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@color/grey"
                app:cardCornerRadius="20dp"
                android:onClick="reponseButton">

                <TextView
                    android:id="@+id/reponse0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/poetsen_one"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@color/grey"
                app:cardCornerRadius="20dp"
                android:onClick="reponseButton">

                <TextView
                    android:id="@+id/reponse1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/poetsen_one"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@color/grey"
                app:cardCornerRadius="20dp"
                android:onClick="reponseButton">

                <TextView
                    android:id="@+id/reponse2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/poetsen_one"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />


            </androidx.cardview.widget.CardView>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/card3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@color/grey"
                app:cardCornerRadius="20dp"
                android:onClick="reponseButton">

                <TextView
                    android:id="@+id/reponse3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/poetsen_one"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@color/grey"
                app:cardCornerRadius="20dp"
                android:onClick="reponseButton">

                <TextView
                    android:id="@+id/reponse4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/poetsen_one"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@color/grey"
                app:cardCornerRadius="20dp"
                android:onClick="reponseButton">

                <TextView
                    android:id="@+id/reponse5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/poetsen_one"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />


            </androidx.cardview.widget.CardView>


        </LinearLayout>





    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:background="@color/grey"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="20dp"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:onClick="suivantButton">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="5dp"
                android:fontFamily="@font/poetsen_one"
                android:text="@string/suivant_button"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_chevron_right_black_24dp"
                android:contentDescription="@string/arrow_image"/>


        </LinearLayout>

    </androidx.cardview.widget.CardView>


</RelativeLayout>